<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="photo_progress_loaded">Progress loaded</string>
    <string name="clear_search">clearSearch</string>
    <string name="search">Search</string>
    <string name="start_polling">Start Polling</string>
    <string name="stop_polling">Stop Polling</string>
    <string name="new_picture_arriving">New Picture Arriving</string>
    <string name="new_picture_title">New Picture Title</string>
    <string name="new_picture_content">New Picture is Here!</string>
    <string name="manual_check">Manual Check</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_by_url">Open By URL</string>
    <string name="open_with_external_broswer">Open with external browser</string>
    <string name="open_in_app_broswer">Open in-app broswer</string>
    <string name="in_app_broswer">In app browser</string>
    <string name="in_app_browser">In App Browser</string>
    <string name="photo_setting">Photo Setting</string>

    <string name="use_gps_setting">Use GPS Setting When Searching for Photos</string>
    <string name="photo_map">Map for photo</string>
    <string name="open_in_map">Open in Map</string>
</resources>
