<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_name"
        android:title="refresh"
        app:showAsAction="never"/>

    <item
        android:title="@string/clear_search"
        android:id="@+id/menu_clear_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnu_toggle_polling"
        android:title="@string/start_polling"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnu_manual_check"
        android:title="@string/manual_check"
        app:showAsAction="never" />

    <item
        android:id="@+id/mnu_setting"
        android:title="@string/photo_setting"
        app:showAsAction="never" />

</menu>